src/index.scss
$primary: #0cab57;
$secondary: #e6f8e0;

body {
    font-size: 12px !important;
}

ul,
li {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

.dropdown-btn {
    width: 130px;
    background-color: red;
    .btn-content {
        display: flex;
        align-items: center;
        border: 1px solid #dedede;

        .title {
            margin-left: 7px;
        }
    }
}

.MuiFormControl-root {
    width: 100% !important;
}

.MuiOutlinedInput {
    width: 100% !important;
    &-root {
        border-radius: 8px !important;
        &.Mui-focused {
            .MuiOutlinedInput-notchedOutline {
                border-color: $primary !important;
            }
        }

        input {
            font-size: 17px !important;
            font-family: "Poppins", sans-serif !important;
        }
    }
}

.MuiInputLabel {
    &-root {
        font-family: "Public Sans", sans-serif !important;
        &.Mui-focused {
            color: $primary !important;
        }
    }
}

.MuiButton {
    &-root {
        text-transform: none !important;
        width: 100% !important;
        background-color: $primary !important;
        padding: 10px 20px !important;
        font-family: "Public Sans", sans-serif !important;
        border-radius: 8px !important;
    }
}

.MuiCheckbox {
    &-root {
        svg path {
            d: path(
                "M17 3a4 4 0 014 4v10a4 4 0 01-4 4H7a4 4 0 01-4-4V7a4 4 0 014-4h10zm0 2H7a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2z"
            ) !important;
        }
        &.Mui-checked {
            color: #0cab57 !important;
            svg path {
                d: path(
                    "M17 3a4 4 0 014 4v10a4 4 0 01-4 4H7a4 4 0 01-4-4V7a4 4 0 014-4h10zm-1.372 4.972a1.006 1.006 0 00-.928.388l-3.78 5-1.63-2.08a1.001 1.001 0 00-1.58 1.23l2.44 3.11a1 1 0 001.58-.01l4.57-6v-.03a1.006 1.006 0 00-.672-1.608z"
                ) !important;
            }
        }
    }
}

.MuiTypography-root {
    font-family: "Poppins", sans-serif !important;
    font-size: 0.9rem !important;
}

.MuiPopover {
    &-paper {
        margin-top: 10px !important;
        border-radius: 12px !important;
        box-shadow: 0 0 20px 5px rgba(187, 187, 187, 0.4) !important;
    }
}

.MuiAlert-root {
    font-family: "Poppins", sans-serif !important;
}
.MuiLoadingButton-loadingIndicator {
    color: white !important;
}

.MuiTable-root {
    padding: 10px !important;
}

.MuiTableHead {
    &-root {
        border-radius: 40px !important;
        margin-right: 30px !important;
    }
}

.MuiTableRow {
    &-root {
        &.Mui-selected {
            background: rgba(145, 158, 171, 0.16) !important;
        }
    }
}

.MuiTableCell-root {
    font-family: "Poppins", sans-serif !important;
    border: none !important;
    padding: 15px !important;

    &:first-of-type {
        padding-left: 15px !important;
    }
    &:last-of-type {
        padding-right: 15px !important;
    }
}

thead .MuiTableCell-root {
    border: none !important;
    background-color: #f4f6f8 !important;
    &:first-of-type {
        border-bottom-left-radius: 8px !important;
        border-top-left-radius: 8px !important;
    }
    &:last-of-type {
        border-bottom-right-radius: 8px !important;
        border-top-right-radius: 8px !important;
    }
}

.MuiCheckbox-colorPrimary {
    color: $primary !important;
}
.table-container {
    padding: 10px 15px;
    border-radius: 15px;
    box-shadow: rgb(145 158 171 / 20%) 0px 0px 2px 0px, rgb(145 158 171 / 12%) 0px 12px 24px -4px;
    .MuiToolbar-root:not(.MuiTablePagination-toolbar) {
        .MuiTypography-root {
            font-weight: bold !important;
            &.MuiTypography-subtitle1 {
                color: $primary !important;
            }
        }
        font-family: "Poppins", sans-serif !important;
        background-color: #f4f6f8 !important;
        border-radius: 10px !important;
        margin-bottom: 20px !important;
    }
}

.MuiLinearProgress-root {
    background-color: $secondary !important;
}
.MuiLinearProgress-barColorPrimary {
    background-color: $primary !important;
}
.modal-backdrop {
    z-index: 10500 !important;
}
.modal {
    z-index: 10501 !important;
}

